--- a/.github/workflows/frontend.main.yml
+++ b/.github/workflows/frontend.main.yml
@@ -22,7 +22,7 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-            az storage blob upload-batch --overwrite true --account-name "azurestorageinji" --auth-mode key -d '$web' -s frontend/
+            az storage blob upload-batch --overwrite true --account-name "azurestorageinji" --auth-mode login -d '$web' -s frontend/
     - name: Purge CDN endpoint
       uses: azure/CLI@v1
       with:
