--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "debug.internalConsoleOptions": "neverOpen",
   "azureFunctions.projectSubpath": "backend/api",
   "azureFunctions.preDeployTask": "publish (functions)",
-  "git.enableCommitSigning": true
+  "git.enableCommitSigning": true,
+  "editor.formatOnSave": true
 }
